src/components/layout/Brands/Brands.module.scss
.border {
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    color: white;
    width: 100%;
    height: 120px;
    border-top: 1px solid rgb(182, 180, 180);
    border-bottom: 1px solid rgb(182, 180, 180);
    margin-bottom: 20px;
}

.button{
    background-color: black;
    height: 100%;
    width: 25px;
    border: none;
    color: rgb(255, 255, 255);
}

.content {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    flex-wrap: nowrap;
    overflow: hidden;
}

